recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:18: error: not found: value steps
subtree(steps:Int, length:Double, angle:Double, shrink:Double) 
        ^Tree:18: error: not found: value length
subtree(steps:Int, length:Double, angle:Double, shrink:Double) 
                   ^Tree:18: error: not found: value angle
subtree(steps:Int, length:Double, angle:Double, shrink:Double) 
                                  ^Tree:18: error: not found: value shrink
subtree(steps:Int, length:Double, angle:Double, shrink:Double) 
                                                ^